force-app/main/default/objects/LeanData__API_Metric__c/LeanData__API_Metric__c.object-meta.xml
<CustomObject>
    <label>API Metric</label>
    <nameField>
        <label>API Metric</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>