force-app/main/default/objects/LeanData__API_Metric__c/fields/LeanData__Data__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Data__c</fullName>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>