force-app/main/default/objects/LeanData__API_Metric__c/fields/LeanData__Operation__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Operation__c</fullName>
    <label>Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>