force-app/main/default/objects/LeanData__API_Metric__c/fields/LeanData__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Start_Time__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>