force-app/main/default/objects/LeanData__API_Metric__c/fields/LeanData__Version__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Version__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>